--- a/pages/beasiswa/d3.html
+++ b/pages/beasiswa/d3.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../css/main.css" />
-    <title>Beasiswa 32</title>
+    <title>Beasiswa D3</title>
   </head>
   <body>
     <!-- HEADER -->
@@ -362,7 +362,7 @@
             <div>/</div>
             <p>Beasiswa</p>
             <div>/</div>
-            <p class="text-[#FEB900] font-semibold">Beasiswa S2</p>
+            <p class="text-[#FEB900] font-semibold">Beasiswa D3</p>
           </div>
         </div>
       </div>
@@ -370,7 +370,7 @@
 
     <div class="max-w-[1280px] mx-auto">
       <h1 class="text-[48px] text-[#394867] text-center my-12 font-bold">
-        BEASISWA S2
+        BEASISWA D3
       </h1>
 
       <!-- BEASISWA -->
@@ -387,18 +387,19 @@
             >
               <figure>
                 <img
-                  src="./assets/s2-1.png"
+                  src="./assets/d3-1.png"
                   alt="card-img-1"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 py-6">
-                <h2 class="card-title font-semibold mb-4">Beasiswa Fincad</h2>
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Data Print
+                </h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Ditawarkan, termasuk bagi pelamar Indonesia yang ingin
-                  melanjutkan studi S2 di dalam negeri. Sasaran pelamarnya
-                  adalah PNS, peneliti, ataupun dosen.
+                  Program beasiswa ini dibuka bagi mahasiswa pergruan tinggi
+                  jenjang diploma (D3 & D4) serta sarjana (S1)
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
@@ -413,18 +414,19 @@
             >
               <figure>
                 <img
-                  src="./assets/s2-2.png"
+                  src="./assets/image-3.png"
                   alt="card-img-2"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">Beasiswa IsDB</h2>
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Telkom University
+                </h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Islamic Development Bank (IsDB) menawarkan beasiswa bagi
-                  negara-negara anggota IsDB, termasuk Indonesia. Beasiswa IsDB
-                  bisa dilamar untuk studi S2 di dalam negeri
+                  Program beasiswa ini disediakan oleh Telkom University untuk
+                  mahasiswa jenjang S1 dan D3.
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
@@ -439,18 +441,20 @@
             >
               <figure>
                 <img
-                  src="./assets/s2-3.png"
+                  src="./assets/d3-3.png"
                   alt="image-3"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">Program GSEP</h2>
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa DPK Amal Shalih
+                </h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Beasiswa ini ditawarkan oleh Global Sustainable Electricity
-                  Partnership (GSEP). Beasiswa GSEP juga bisa dilamar bagi
-                  mereka yang sudah berstatus mahasiswa S2.
+                  Beasiswa diberikan oleh donatur Hamba Allah. Karena itulah,
+                  beasiswa ini bernama Amal Shalih. Beasiswa ini diberikan
+                  kepada Mahasiswa USK Prodi S1 dan D3.
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
@@ -465,17 +469,18 @@
             >
               <figure>
                 <img
-                  src="./assets/s2-4.png"
+                  src="./assets/d3-4.png"
                   alt="card-img-4"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">Beasiswa LPDP</h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa Astra</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Beasiswa Kementerian Pendidikan dan Kebudayaan menawarkan
-                  beasiswa S2 untuk studi di dalam negeri.
+                  Beasiswa dari Yayasan Astra Honda Motor Indonesia untuk
+                  mahasiswa D3 dari semester II sampai semester VI dan jenjang
+                  S1 dari semester II sampai dengan semester VIII.
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
@@ -489,18 +494,19 @@
             >
               <figure>
                 <img
-                  src="./assets/s2-5.png"
+                  src="./assets/d3-5.png"
                   alt="card-img-5"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">Beasiswa Teladan</h2>
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Bank Indonesia
+                </h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa S2 ini merupakan program dari yayasan yang
-                  dimiliki oleh salah satu pengusaha Indonesia, Sukanto Tanoto.
-                  Beasiswa ini dikhususkan untuk PTN saja.
+                  Program beasiswa ini disediakan oleh Bank Indonesia untuk
+                  untuk mahasiswa jenjang D3, D4 dan S1
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
@@ -514,20 +520,18 @@
             >
               <figure>
                 <img
-                  src="./assets/s2-6.png"
+                  src="./assets/d3-6.png"
                   alt="card-img-6"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Dexa Award
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa YBM BRI</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Beasiswa S2 dalam negeri yang rutin dibuka. Ditawarkan oleh
-                  Dexa Group yang memberi peluang bagi lulusan S1 semua jurusan
-                  yang ingin melanjutkan S2 di dalam negeri.
+                  YBM BRI merupakan program pemberdayaan dana zakat bidang
+                  pendidikan yang diberikan untuk mahasiswa jenjang S-1/D-4 di
+                  berbagai Perguruan Tinggi Negeri.
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
