--- a/pages/beasiswa/s1.html
+++ b/pages/beasiswa/s1.html
@@ -429,7 +429,11 @@
                   Beasiswa ini diberikan oleh Djarum Foundation bagi mahasiswa
                   D4 dan S1 yang sedang menempuh pendidikan.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
 
@@ -452,7 +456,11 @@
                   Program beasiswa ini disediakan oleh Telkom University untuk
                   mahasiswa jenjang S1 dan D3.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
 
@@ -476,7 +484,11 @@
                   tahun ketiga jenjang S1 jurusan teknik lebih dari 20
                   universitas negeri dan swasta di Indonesia.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
             <div
@@ -499,7 +511,11 @@
                   S1, S2, dan S3, pendidikan profesi, pendidikan nongelar,
                   pelajar berprestasi, guru, dosen.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
             <div
@@ -520,7 +536,11 @@
                   Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
                   sains.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
           </div>
