--- a/pages/artikel/index.html
+++ b/pages/artikel/index.html
@@ -61,14 +61,14 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../tentang/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >TENTANG</a
                   >
                 </li>
                 <li>
                   <a
-                    href="../artikel/index.html"
+                    href="./index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >ARTIKEL</a
                   >
@@ -108,30 +108,37 @@
                     >
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/s1.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Dashboard</a
+                          >BEASISWA S1</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/s2.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Settings</a
+                          >BEASISWA S2</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/s3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Earnings</a
+                          >BEASISWA S3</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/d3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Sign out</a
+                          >BEASISWA D3</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="../beasiswa/d4.html"
+                          class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
+                          >BEASISWA D4</a
                         >
                       </li>
                     </ul>
@@ -400,16 +407,154 @@
             </p>
 
             <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
-            <div class="flex gap-2 items-center">
-              <a href="./detail.html" class="text-[#717171] font-semibold text-[13px]"
-                >Selengkapnya</a
-              >
-              <img src="./assets/arrow.png" alt="arrow" />
-            </div>
+            <a
+              href="./detail-2.html"
+              class="text-[#717171] font-semibold text-[13px] flex gap-2 items-center"
+              >Selengkapnya <img src="./assets/arrow.png" alt="arrow"
+            /></a>
           </div>
         </div>
         <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
-          <img src="./assets/image 17.png" alt="img-1" />
+          <img src="./assets/image-2.png" alt="img-1" />
+          <div class="py-4 px-6 flex flex-col gap-2">
+            <h3 class="text-[20px] font-semibold leading-[35px]">
+              Tips Sukses dalam Mencari dan Mengajukan Beasiswa
+            </h3>
+
+            <div class="flex items-center gap-6">
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-user.png" alt="icon-user" />
+                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
+              </div>
+              <p class="text-[#7E7E7E] text-[15px]">/</p>
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-follder.png" alt="icon-folder" />
+                <p class="text-[#7E7E7E] text-[15px]">Tips</p>
+              </div>
+            </div>
+
+            <p
+              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
+            >
+              Program beasiswa ini disediakan oleh Astra International untuk
+              mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
+            </p>
+
+            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
+            <a
+              href="./detail-2.html"
+              class="text-[#717171] font-semibold text-[13px] flex gap-2 items-center"
+              >Selengkapnya <img src="./assets/arrow.png" alt="arrow"
+            /></a>
+          </div>
+        </div>
+
+        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
+          <img src="./assets/image 13.png" alt="img-1" />
+          <div class="py-4 px-6 flex flex-col gap-2">
+            <h3 class="text-[20px] font-semibold leading-[35px]">
+              Strategi Efektif dalam Menulis Esai Beasiswa yang Memikat
+            </h3>
+
+            <div class="flex items-center gap-6">
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-user.png" alt="icon-user" />
+                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
+              </div>
+              <p class="text-[#7E7E7E] text-[15px]">/</p>
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-follder.png" alt="icon-folder" />
+                <p class="text-[#7E7E7E] text-[15px]">Tips</p>
+              </div>
+            </div>
+
+            <p
+              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
+            >
+              Program beasiswa ini disediakan oleh Astra International untuk
+              mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
+            </p>
+
+            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
+            <a
+              href="./detail-2.html"
+              class="text-[#717171] font-semibold text-[13px] flex gap-2 items-center"
+              >Selengkapnya <img src="./assets/arrow.png" alt="arrow"
+            /></a>
+          </div>
+        </div>
+        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
+          <img src="./assets/image 19.png" alt="img-1" />
+          <div class="py-4 px-6 flex flex-col gap-2">
+            <h3 class="text-[20px] font-semibold leading-[35px]">
+              Kisah Inspiratif Mahasiswa Penerima Beasiswa yang Mencapai Impian
+              Mereka
+            </h3>
+
+            <div class="flex items-center gap-6">
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-user.png" alt="icon-user" />
+                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
+              </div>
+              <p class="text-[#7E7E7E] text-[15px]">/</p>
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-follder.png" alt="icon-folder" />
+                <p class="text-[#7E7E7E] text-[15px]">Motivasi</p>
+              </div>
+            </div>
+
+            <p
+              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
+            >
+              Program beasiswa ini disediakan oleh Astra International untuk
+              mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
+            </p>
+
+            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
+            <a
+              href="./detail-2.html"
+              class="text-[#717171] font-semibold text-[13px] flex gap-2 items-center"
+              >Selengkapnya <img src="./assets/arrow.png" alt="arrow"
+            /></a>
+          </div>
+        </div>
+        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
+          <img src="./assets/image 18.png" alt="img-1" />
+          <div class="py-4 px-6 flex flex-col gap-2">
+            <h3 class="text-[20px] font-semibold leading-[35px]">
+              Pemerintah Meluncurkan Program Beasiswa Baru untuk Mahasiswa
+              Berprestasi
+            </h3>
+
+            <div class="flex items-center gap-6">
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-user.png" alt="icon-user" />
+                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
+              </div>
+              <p class="text-[#7E7E7E] text-[15px]">/</p>
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-follder.png" alt="icon-folder" />
+                <p class="text-[#7E7E7E] text-[15px]">Berita</p>
+              </div>
+            </div>
+
+            <p
+              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
+            >
+              Mengatasi Rintangan dan Mempertahankan Semangat dalam Perjalanan
+              Beasiswa
+            </p>
+
+            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
+            <a
+              href="./detail-2.html"
+              class="text-[#717171] font-semibold text-[13px] flex gap-2 items-center"
+              >Selengkapnya <img src="./assets/arrow.png" alt="arrow"
+            /></a>
+          </div>
+        </div>
+        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
+          <img src="./assets/image 20.png" alt="img-1" />
           <div class="py-4 px-6 flex flex-col gap-2">
             <h3 class="text-[20px] font-semibold leading-[35px]">
               ASTRA Menyediakan Beasiswa tingkat S1
@@ -435,153 +580,11 @@
             </p>
 
             <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
-            <div class="flex gap-2 items-center">
-              <a href="" class="text-[#717171] font-semibold text-[13px]"
-                >Selengkapnya</a
-              >
-              <img src="./assets/arrow.png" alt="arrow" />
-            </div>
-          </div>
-        </div>
-
-        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
-          <img src="./assets/image 17.png" alt="img-1" />
-          <div class="py-4 px-6 flex flex-col gap-2">
-            <h3 class="text-[20px] font-semibold leading-[35px]">
-              ASTRA Menyediakan Beasiswa tingkat S1
-            </h3>
-
-            <div class="flex items-center gap-6">
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-user.png" alt="icon-user" />
-                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
-              </div>
-              <p class="text-[#7E7E7E] text-[15px]">/</p>
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-follder.png" alt="icon-folder" />
-                <p class="text-[#7E7E7E] text-[15px]">Berita</p>
-              </div>
-            </div>
-
-            <p
-              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
-            >
-              Program beasiswa ini disediakan oleh Astra International untuk
-              mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-            </p>
-
-            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
-            <div class="flex gap-2 items-center">
-              <a href="" class="text-[#717171] font-semibold text-[13px]"
-                >Selengkapnya</a
-              >
-              <img src="./assets/arrow.png" alt="arrow" />
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
-          <img src="./assets/image 17.png" alt="img-1" />
-          <div class="py-4 px-6 flex flex-col gap-2">
-            <h3 class="text-[20px] font-semibold leading-[35px]">
-              ASTRA Menyediakan Beasiswa tingkat S1
-            </h3>
-
-            <div class="flex items-center gap-6">
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-user.png" alt="icon-user" />
-                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
-              </div>
-              <p class="text-[#7E7E7E] text-[15px]">/</p>
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-follder.png" alt="icon-folder" />
-                <p class="text-[#7E7E7E] text-[15px]">Berita</p>
-              </div>
-            </div>
-
-            <p
-              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
-            >
-              Program beasiswa ini disediakan oleh Astra International untuk
-              mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-            </p>
-
-            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
-            <div class="flex gap-2 items-center">
-              <a href="" class="text-[#717171] font-semibold text-[13px]"
-                >Selengkapnya</a
-              >
-              <img src="./assets/arrow.png" alt="arrow" />
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
-          <img src="./assets/image 17.png" alt="img-1" />
-          <div class="py-4 px-6 flex flex-col gap-2">
-            <h3 class="text-[20px] font-semibold leading-[35px]">
-              ASTRA Menyediakan Beasiswa tingkat S1
-            </h3>
-
-            <div class="flex items-center gap-6">
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-user.png" alt="icon-user" />
-                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
-              </div>
-              <p class="text-[#7E7E7E] text-[15px]">/</p>
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-follder.png" alt="icon-folder" />
-                <p class="text-[#7E7E7E] text-[15px]">Berita</p>
-              </div>
-            </div>
-
-            <p
-              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
-            >
-              Program beasiswa ini disediakan oleh Astra International untuk
-              mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-            </p>
-
-            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
-            <div class="flex gap-2 items-center">
-              <a href="" class="text-[#717171] font-semibold text-[13px]"
-                >Selengkapnya</a
-              >
-              <img src="./assets/arrow.png" alt="arrow" />
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col gap-2 sm:max-w-[343px] shadow-sm border-2">
-          <img src="./assets/image 17.png" alt="img-1" />
-          <div class="py-4 px-6 flex flex-col gap-2">
-            <h3 class="text-[20px] font-semibold leading-[35px]">
-              ASTRA Menyediakan Beasiswa tingkat S1
-            </h3>
-
-            <div class="flex items-center gap-6">
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-user.png" alt="icon-user" />
-                <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
-              </div>
-              <p class="text-[#7E7E7E] text-[15px]">/</p>
-              <div class="flex item-center gap-2">
-                <img src="../../assets/icon-follder.png" alt="icon-folder" />
-                <p class="text-[#7E7E7E] text-[15px]">Berita</p>
-              </div>
-            </div>
-
-            <p
-              class="text-[#6F6A6A] text-[15px] leading-[22.5px] tracking-tight"
-            >
-              Program beasiswa ini disediakan oleh Astra International untuk
-              mahasiswa S1 yang berprestasi dan memiliki kebutuhan finansial.
-            </p>
-
-            <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
-            <div class="flex gap-2 items-center">
-              <a href="" class="text-[#717171] font-semibold text-[13px]"
-                >Selengkapnya</a
-              >
-              <img src="./assets/arrow.png" alt="arrow" />
-            </div>
+            <a
+              href="./detail-2.html"
+              class="text-[#717171] font-semibold text-[13px] flex gap-2 items-center"
+              >Selengkapnya <img src="./assets/arrow.png" alt="arrow"
+            /></a>
           </div>
         </div>
       </div>
