--- a/pages/beasiswa/detail.html
+++ b/pages/beasiswa/detail.html
@@ -18,7 +18,7 @@
       <div class="absolute w-full">
         <nav class="bg-transparent border-gray-200">
           <div
-            class="max-w-screen-xl flex flex-wrap items-center gap-20 mx-auto px-4"
+            class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-4"
           >
             <a href="../beranda/index.html" class="flex items-center">
               <img
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../tentang/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >TENTANG</a
                   >
@@ -109,30 +109,37 @@
                     >
                       <li>
                         <a
-                          href="#"
+                          href="./s1.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Dashboard</a
+                          >BEASISWA S1</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="./s2.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Settings</a
+                          >BEASISWA S2</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="./s3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Earnings</a
+                          >BEASISWA S3</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="./d3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Sign out</a
+                          >BEASISWA D3</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="./d4.html"
+                          class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
+                          >BEASISWA D4</a
                         >
                       </li>
                     </ul>
