--- a/pages/beranda/index.html
+++ b/pages/beranda/index.html
@@ -583,76 +583,101 @@
       <div
         class="flex flex-col flex-wrap gap-6 sm:flex-row items-center justify-center mt-8 p-4 md:p-0"
       >
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-1.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
+        <a href="../artikel/detail-2.html">
+          <div class="flex flex-col gap-2 sm:max-w-[343px]">
+            <div class="relative">
+              <img
+                src="./assets/artikel-1.png"
+                alt="artikel-1"
+                class="w-full"
+              />
+              <div
+                class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2"
+              >
+                <span class="text-[17px] font-semibold">2 Agustus</span>
+              </div>
             </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Cara Mudah Diterima Beasiswa Tingkat S1
-          </h3>
+            <h3 class="text-[20px] font-semibold leading-[35px]">
+              Cara Mudah Diterima Beasiswa Tingkat S1
+            </h3>
 
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
-            </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Tips</p>
+            <div class="flex items-center gap-6">
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-user.png" alt="icon-user" />
+                <p class="text-[#7E7E7E] text-[15px]">Hani Nurisa</p>
+              </div>
+              <p class="text-[#7E7E7E] text-[15px]">/</p>
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-follder.png" alt="icon-folder" />
+                <p class="text-[#7E7E7E] text-[15px]">Tips</p>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-2.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
+        <a href="../artikel/detail.html">
+          <div class="flex flex-col gap-2 sm:max-w-[343px]">
+            <div class="relative">
+              <img
+                src="./assets/artikel-2.png"
+                alt="artikel-1"
+                class="w-full"
+              />
+              <div
+                class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2"
+              >
+                <span class="text-[17px] font-semibold">2 Agustus</span>
+              </div>
             </div>
-          </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            BRI Beri Beasiswa S2 untuk 20 Jurnalis Fellowship
-          </h3>
+            <h3 class="text-[20px] font-semibold leading-[35px]">
+              BRI Beri Beasiswa S2 untuk 20 Jurnalis Fellowship
+            </h3>
 
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Favian Handi</p>
-            </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Berita</p>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col gap-2 sm:max-w-[343px]">
-          <div class="relative">
-            <img src="./assets/artikel-3.png" alt="artikel-1" class="w-full" />
-            <div class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2">
-              <span class="text-[17px] font-semibold">2 Agustus</span>
+            <div class="flex items-center gap-6">
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-user.png" alt="icon-user" />
+                <p class="text-[#7E7E7E] text-[15px]">Favian Handi</p>
+              </div>
+              <p class="text-[#7E7E7E] text-[15px]">/</p>
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-follder.png" alt="icon-folder" />
+                <p class="text-[#7E7E7E] text-[15px]">Berita</p>
+              </div>
             </div>
           </div>
-          <h3 class="text-[20px] font-semibold leading-[35px]">
-            Djarum BeasiswaPus dibuka Kembali
-          </h3>
+        </a>
 
-          <div class="flex items-center gap-6">
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-user.png" alt="icon-user" />
-              <p class="text-[#7E7E7E] text-[15px]">Ina Narendra</p>
+        <a href="../artikel/detail-2.html">
+          <div class="flex flex-col gap-2 sm:max-w-[343px]">
+            <div class="relative">
+              <img
+                src="./assets/artikel-3.png"
+                alt="artikel-1"
+                class="w-full"
+              />
+              <div
+                class="absolute bottom-0 right-0 bg-[#FBC355] text-white p-2"
+              >
+                <span class="text-[17px] font-semibold">2 Agustus</span>
+              </div>
             </div>
-            <p class="text-[#7E7E7E] text-[15px]">/</p>
-            <div class="flex item-center gap-2">
-              <img src="../../assets/icon-follder.png" alt="icon-folder" />
-              <p class="text-[#7E7E7E] text-[15px]">Berita</p>
+            <h3 class="text-[20px] font-semibold leading-[35px]">
+              Djarum BeasiswaPus dibuka Kembali
+            </h3>
+
+            <div class="flex items-center gap-6">
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-user.png" alt="icon-user" />
+                <p class="text-[#7E7E7E] text-[15px]">Ina Narendra</p>
+              </div>
+              <p class="text-[#7E7E7E] text-[15px]">/</p>
+              <div class="flex item-center gap-2">
+                <img src="../../assets/icon-follder.png" alt="icon-folder" />
+                <p class="text-[#7E7E7E] text-[15px]">Berita</p>
+              </div>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
 
