--- a/pages/tentang/index.html
+++ b/pages/tentang/index.html
@@ -62,7 +62,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="./index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >TENTANG</a
                   >
@@ -111,29 +111,35 @@
                         <a
                           href="../beasiswa/s1.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                        >
-                          BEASISWA S1</a
-                        >
-                      </li>
-                      <li>
-                        <a
-                          href="#"
-                          class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Settings</a
+                          >BEASISWA S1</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/s2.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Earnings</a
+                          >BEASISWA S2</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/s3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Sign out</a
+                          >BEASISWA S3</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="../beasiswa/d3.html"
+                          class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
+                          >BEASISWA D3</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="../beasiswa/d4.html"
+                          class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
+                          >BEASISWA D4</a
                         >
                       </li>
                     </ul>
