--- a/pages/beasiswa/s3.html
+++ b/pages/beasiswa/s3.html
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a
-                    href="#"
+                    href="../tentang/index.html"
                     class="text-[15px] font-semibold text-[#B7B7B7] block py-2 pl-3 pr-4 rounded lg:border-0 lg:p-0"
                     >TENTANG</a
                   >
@@ -108,30 +108,37 @@
                     >
                       <li>
                         <a
-                          href="#"
+                          href="./s1.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Dashboard</a
+                          >BEASISWA S1</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="./s2.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Settings</a
+                          >BEASISWA S2</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="./s3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Earnings</a
+                          >BEASISWA S3</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="./d3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Sign out</a
+                          >BEASISWA D3</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          href="./d4.html"
+                          class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
+                          >BEASISWA D4</a
                         >
                       </li>
                     </ul>
